--- a/src/Skinet.Application/Skinet.MarketplaceApi/Skinet.MarketplaceApi.csproj
+++ b/src/Skinet.Application/Skinet.MarketplaceApi/Skinet.MarketplaceApi.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Skinet.Domain\Skinet.Domain\Skinet.Domain.csproj" />
+    <ProjectReference Include="..\..\Skinet.Infrastructure\Skinet.CrossCutting\Skinet.CrossCutting.csproj" />
   </ItemGroup>
 
 </Project>
