Implements the base entity and refactor product entity

--- a/src/Skinet.Domain/Skinet.Domain/Skinet.Domain.csproj
+++ b/src/Skinet.Domain/Skinet.Domain/Skinet.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Skinet.SharedKernel\Skinet.Shared\Skinet.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
