--- a/src/Skinet.Domain/Skinet.Domain/Skinet.Domain.csproj
+++ b/src/Skinet.Domain/Skinet.Domain/Skinet.Domain.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<LangVersion>10</LangVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -14,6 +15,10 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\Skinet.SharedKernel\Skinet.Shared\Skinet.Shared.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Specifications" />
 	</ItemGroup>
 
 </Project>
